--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "react": "^19.1.1",
